--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     </head>
     <body>
         Hello World!
-        asda
+        <p>Contoh 1</p>
+        <p>Contoh 2</p>
+        <p>Contoh 3</p>
     </body>
 </html
