--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
     </head>
     <body>
         Hello World!
+        <p>Contoh 1</p>
+        <p>Contoh 2</p>
+        <p>Contoh 3</p>
+        <p>Contoh 4</p>
     </body>
 </html
