--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <html>
     <head>
-        
+        <style>
+            p.first{
+                margin-top: 50px;
+                padding: 10px;
+                width: 500px;
+                border: 1px dashed rgb(243,223,5);
+            }
+
+            .static{
+                margin-top: 30px;
+                position:  static;
+                border: 3px solid #73AD21;
+                top: 30px;
+                left: 30px;
+            }
+
+            .relative{
+                position: relative;
+                left: 30px;
+                top: 20px;
+                border: 3px solid #c61111;
+            }
+
+            .absolute{
+                position: absolute;
+                top: 80px;
+                right: 0;
+                width: 200px;
+                height: 100px;
+                border: 3px solid #372a2a;
+            }
+
+            .fixed{
+                position: fixed;
+                bottom: 0;
+                right: 0;
+                width: 300px;
+                border: 3px solid #37ad21;
+            }
+
+            div.sticky{
+                position: -webkit-sticky;
+                bottom: sticky;
+                top: 0;
+                background-color: green;
+                border: 2px solid #4caf50;
+            }
+
+        </style>
     </head>
     <body>
-        Hello World!
-        <p>Contoh 1</p>
-        <p>Contoh 2</p>
-        <p>Contoh 3</p>
-        <p>Contoh 4</p>
+        <h1>Berita Terkini</h1>
+        <p class="first">
+            Testing dulu deh isinya apa aja ini
+        </p>
+
+        <div class="absolute">
+            Pengadilan di RI Ternyata Pernah Gunakan Poligraf sebagai Alat Bukti, Kasus Apa?
+        </div>
+
+        <div class="fixed">
+            Pengadilan di RI Ternyata Pernah Gunakan Poligraf sebagai Alat Bukti, Kasus Apa?
+        </div>
+
+        <div class="sticky">
+            Pengadilan di RI Ternyata Pernah Gunakan Poligraf sebagai Alat Bukti, Kasus Apa?
+        </div>
+
+        <div class="static">
+            <label>Kerupuk 1</label>
+        </div>
+
+        <div class="static">
+            <label class=relative>Kerupuk 2</label>
+        </div>
+
+        <div class="static">
+            <label>Kerupuk 3</label>
+        </div>
     </body>
 </html
